Fixed protocol specific includes

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
      </div>
      <div>
           <h5 class="title">HTML</h5>
-     <iframe id="frame" src="http://prat0318.github.io/index1.html" frameborder="0"  width="100%" height="2450px"></iframe>
+     <iframe id="frame" src="//prat0318.github.io/index1.html" frameborder="0"  width="100%" height="2450px"></iframe>
 	</div>
      <div>
           <h5 class="title">HTML*</h5>
-     <iframe id="frame" src="http://prat0318.github.io/index2.html" frameborder="0"  width="100%" height="2450px"></iframe>
+     <iframe id="frame" src="//prat0318.github.io/index2.html" frameborder="0"  width="100%" height="2450px"></iframe>
 	</div>
      <div>
           <h5 class="title">LaTeX</h5>
@@ -64,8 +64,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
     </div>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="javascripts/jquery.touchSwipe.min.js"></script>
 <script src="javascripts/jquery.liquid-slider.min.js"></script>
 <script src="javascripts/pdf.js"></script>
