Removed more absolute links

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
      </div>
      <div>
           <h5 class="title">HTML</h5>
-     <iframe id="frame" src="//prat0318.github.io/index1.html" frameborder="0"  width="100%" height="2450px"></iframe>
+     <iframe id="frame" src="/index1.html" frameborder="0"  width="100%" height="2450px"></iframe>
 	</div>
      <div>
           <h5 class="title">HTML*</h5>
-     <iframe id="frame" src="//prat0318.github.io/index2.html" frameborder="0"  width="100%" height="2450px"></iframe>
+     <iframe id="frame" src="/index2.html" frameborder="0"  width="100%" height="2450px"></iframe>
 	</div>
      <div>
           <h5 class="title">LaTeX</h5>
